--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,29 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # dependencies
 /node_modules
 package-lock.json
+dist
+dist-ssr
+*.local
 
 # CHANGELOG file
 ./CHANGELOG.md
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
