--- a/package.json
+++ b/package.json
@@ -1,10 +1,38 @@
 {
 	"name": "photoidtool",
+	"private": true,
 	"version": "1.1.0",
 	"description": "Photo ID Tool is a fast and user-friendly web application designed to help you create passport-size photos in just a few clicks.",
-	"main": "index.js",
+	"type": "module",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@reduxjs/toolkit": "^2.7.0",
+		"autoprefixer": "^10.4.21",
+		"concat": "^1.0.3",
+		"node-sass": "^9.0.0",
+		"npm-run-all": "^4.1.5",
+		"postcss-cli": "^11.0.1",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-redux": "^9.2.0",
+		"react-router-dom": "^7.5.3",
+		"scss": "^0.2.4"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.22.0",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
+		"@vitejs/plugin-react-swc": "^3.8.0",
+		"eslint": "^9.22.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
+		"globals": "^16.0.0",
+		"vite": "^6.3.1"
 	},
 	"keywords": [
 		"photo id tool",
