- Added Js logics for work app properly. - Added upload images, generated more images, download as pdf or print directly. - Added redux slices & store for working with state. - Added static paths for import others type files easily.
- Update necessary jsx.

- Working as a previous traditionl code/functionality.

---

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,9 @@
 		"baseUrl": "",
 		"paths": {
 			"@assets/*": ["src/main/dev_abhi/assets/*"],
-			"@shared/*": ["src/main/dev_abhi/shared/*"]
+			"@shared/*": ["src/main/dev_abhi/shared/*"],
+			"@app/*": ["src/main/dev_abhi/app/*"],
+			"@components/*": ["src/main/dev_abhi/components/*"]
 		}
 	}
 	// "include": ["src", "style", "css"]
