--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@reduxjs/toolkit": "^2.7.0",
 		"autoprefixer": "^10.4.21",
 		"concat": "^1.0.3",
+		"html2pdf.js": "^0.10.3",
 		"node-sass": "^9.0.0",
 		"npm-run-all": "^4.1.5",
 		"postcss-cli": "^11.0.1",
