--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,11 @@ dist-ssr
 *.local
 
 # CHANGELOG file
-./CHANGELOG.
+./CHANGELOG.md
 
 # DEV FILES
-src/main/reactVite/dev/abhish/assets/styles/css/style.comp.css
-src/main/reactVite/dev/abhish/assets/styles/css/style.prefix.css
+./src/main/dev_abhi/assets/resources/styles/css/style.comp.css
+./src/main/dev_abhi/assets/resources/styles/css/style.prefix.css
 
 # Editor directories and files
 .vscode/*
